--- a/nicepage.css
+++ b/nicepage.css
@@ -44165,13 +44165,13 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 112px;
+  min-height: 104px;
 }
 
 .u-header .u-image-1 {
-  width: 82px;
-  height: 92px;
-  margin: 10px auto 0 0;
+  width: 57px;
+  height: 64px;
+  margin: 20px auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -44180,7 +44180,12 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -64px 0 38px auto;
+  margin: -48px 0 36px auto;
+}
+
+.u-header .u-hamburger-link-1 {
+  font-size: calc(1em + 8px);
+  padding: 4px 42px;
 }
 
 .u-header .u-nav-1 {
@@ -44188,57 +44193,27 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-nav-2 {
-  font-size: 1.25rem;
-}
-@media (max-width: 1199px) {
-  .u-header .u-menu-1 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-header .u-nav-1 {
-    letter-spacing: normal;
-  }
+  font-size: 1rem;
 }
 
 
+@media (max-width: 767px) {
+  .u-header .u-sheet-1 {
+    min-height: auto;
+  }
+}
 
  .u-footer {
   background-image: none;
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 120px;
+  min-height: 69px;
 }
 
-.u-footer .u-text-1 {
-  width: 417px;
-  margin: 49px auto;
-}
-@media (max-width: 1199px) {
-  .u-footer .u-sheet-1 {
-    min-height: 99px;
-  }
-}
-@media (max-width: 991px) {
-  .u-footer .u-sheet-1 {
-    min-height: 76px;
-  }
-}
-@media (max-width: 767px) {
-  .u-footer .u-sheet-1 {
-    min-height: 57px;
-  }
-}
-@media (max-width: 575px) {
-  .u-footer .u-sheet-1 {
-    min-height: 36px;
-  }
 
-  .u-footer .u-text-1 {
-    width: 340px;
-  }
-}
+
+
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
