--- a/Démarrage.css
+++ b/Démarrage.css
@@ -1,80 +1,388 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 1876px;
+  min-height: 461px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 60px 0 0;
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin: 20px auto 0 20px;
 }
 
 .u-section-1 .u-image-1 {
+  width: 371px;
+  height: 148px;
+  margin: 27px auto 0 187px;
+}
+
+.u-section-1 .u-image-2 {
+  width: 389px;
+  height: 147px;
+  margin: -143px 193px 0 auto;
+}
+
+.u-section-1 .u-image-3 {
+  width: 390px;
+  height: 152px;
+  margin: 15px auto 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-text-1 {
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-left: 94px;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: 20px;
+    margin-left: 458px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-left: 182px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-image-1 {
+    margin-left: 105px;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-left: 249px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-left: 83px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-text-1 {
+    font-size: 1rem;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-left: 132px;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-right: 151px;
+    margin-left: 114px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-left: 38px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 411px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 340px;
+    height: 136px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-2 {
+    width: 340px;
+    height: 128px;
+    margin-left: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-3 {
+    width: 340px;
+    height: 133px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 1525px;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 60px 0 0;
+}
+
+.u-section-2 .u-image-1 {
   width: 274px;
   height: 429px;
   margin: 0 auto;
 }
 
-.u-section-1 .u-text-2 {
+.u-section-2 .u-text-2 {
   font-weight: 400;
   font-size: 1.25rem;
   margin: 31px 0 0;
 }
 
-.u-section-1 .u-text-3 {
+.u-section-2 .u-text-3 {
   background-image: none;
   margin: 0;
 }
 
-.u-section-1 .u-image-2 {
+.u-section-2 .u-image-2 {
   width: 1022px;
   height: 633px;
-  margin: 20px auto 60px;
+  margin: 20px auto 39px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1825px;
+  .u-section-2 .u-sheet-1 {
+    min-height: 1474px;
   }
 
-  .u-section-1 .u-image-2 {
+  .u-section-2 .u-image-2 {
     width: 940px;
     height: 582px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1689px;
+  .u-section-2 .u-sheet-1 {
+    min-height: 1338px;
   }
 
-  .u-section-1 .u-image-2 {
+  .u-section-2 .u-image-2 {
     width: 720px;
     height: 446px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1578px;
+  .u-section-2 .u-sheet-1 {
+    min-height: 1227px;
   }
 
-  .u-section-1 .u-text-2 {
+  .u-section-2 .u-text-2 {
     font-size: 1rem;
   }
 
-  .u-section-1 .u-image-2 {
+  .u-section-2 .u-image-2 {
     width: 540px;
     height: 335px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1454px;
+  .u-section-2 .u-sheet-1 {
+    min-height: 1103px;
   }
 
-  .u-section-1 .u-image-2 {
+  .u-section-2 .u-image-2 {
     width: 340px;
     height: 211px;
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 1259px;
+}.u-section-3 .u-sheet-1 {
+  min-height: 1402px;
+}
+
+.u-section-3 .u-text-1 {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin: 20px auto 0 20px;
+}
+
+.u-section-3 .u-image-1 {
+  width: 321px;
+  height: 521px;
+  margin: 20px auto 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin: 20px 0 0 20px;
+}
+
+.u-section-3 .u-image-2 {
+  width: 734px;
+  height: 619px;
+  margin: 8px auto 34px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-text-1 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1390px;
+  }
+
+  .u-section-3 .u-image-2 {
+    width: 720px;
+    height: 607px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1238px;
+  }
+
+  .u-section-3 .u-text-1 {
+    font-size: 1rem;
+  }
+
+  .u-section-3 .u-text-2 {
+    font-size: 1rem;
+  }
+
+  .u-section-3 .u-image-2 {
+    width: 540px;
+    height: 455px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1069px;
+  }
+
+  .u-section-3 .u-image-2 {
+    width: 340px;
+    height: 286px;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 473px;
+}
+
+.u-section-4 .u-image-1 {
+  width: 357px;
+  height: 473px;
+  margin: 0 auto 0 213px;
+}
+
+.u-section-4 .u-image-2 {
+  width: 356px;
+  height: 473px;
+  margin: -473px 214px 0 auto;
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-image-1 {
+    margin-left: 183px;
+  }
+
+  .u-section-4 .u-image-2 {
+    margin-right: 184px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 429px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 340px;
+    height: 450px;
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-image-2 {
+    width: 340px;
+    height: 452px;
+    margin-top: -450px;
+    margin-right: 0;
+  }
+}.u-section-5 .u-sheet-1 {
+  min-height: 976px;
+}
+
+.u-section-5 .u-text-1 {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin: 20px auto 0 20px;
+}
+
+.u-section-5 .u-image-1 {
+  width: 459px;
+  height: 71px;
+  margin: 21px auto 0 20px;
+}
+
+.u-section-5 .u-text-2 {
+  margin: 0 0 -3px 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-text-1 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-text-2 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-text-1 {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 958px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 340px;
+    height: 53px;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 719px;
+}
+
+.u-section-6 .u-text-1 {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin: 20px auto 0 20px;
+}
+
+.u-section-6 .u-image-1 {
+  width: 304px;
+  height: 540px;
+  margin: 8px auto 0;
+}
+
+.u-section-6 .u-btn-1 {
+  --radius: 50px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 20px auto 43px;
+  padding: 17px 40px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-text-1 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-text-1 {
+    font-size: 1rem;
+  }
 }
