--- a/Démarrage.css
+++ b/Démarrage.css
@@ -1,17 +1,17 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 461px;
+  min-height: 428px;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 400;
   font-size: 1.25rem;
-  margin: 20px auto 0 20px;
+  margin: 22px 10px 0;
 }
 
 .u-section-1 .u-image-1 {
   width: 371px;
   height: 148px;
-  margin: 27px auto 0 187px;
+  margin: 25px auto 0 187px;
 }
 
 .u-section-1 .u-image-2 {
@@ -23,11 +23,12 @@
 .u-section-1 .u-image-3 {
   width: 390px;
   height: 152px;
-  margin: 15px auto 60px;
+  margin: 15px auto 30px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-1 {
+    margin-right: 0;
     margin-left: 0;
   }
 
@@ -80,7 +81,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 411px;
+    min-height: 378px;
   }
 
   .u-section-1 .u-image-1 {
@@ -139,6 +140,10 @@
     min-height: 1474px;
   }
 
+  .u-section-2 .u-image-1 {
+    margin-top: 20px;
+  }
+
   .u-section-2 .u-image-2 {
     width: 940px;
     height: 582px;
@@ -181,7 +186,7 @@
     height: 211px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 1402px;
+  min-height: 1466px;
 }
 
 .u-section-3 .u-text-1 {
@@ -220,7 +225,7 @@
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1390px;
+    min-height: 1454px;
   }
 
   .u-section-3 .u-image-2 {
@@ -231,7 +236,7 @@
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1238px;
+    min-height: 1302px;
   }
 
   .u-section-3 .u-text-1 {
@@ -250,7 +255,7 @@
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1069px;
+    min-height: 1133px;
   }
 
   .u-section-3 .u-image-2 {
@@ -271,6 +276,12 @@
   width: 356px;
   height: 473px;
   margin: -473px 214px 0 auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-image-2 {
+    margin-top: 20px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -297,30 +308,29 @@
   .u-section-4 .u-image-2 {
     width: 340px;
     height: 452px;
-    margin-top: -450px;
     margin-right: 0;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 976px;
+  min-height: 236px;
 }
 
 .u-section-5 .u-text-1 {
   font-weight: 400;
   font-size: 1.25rem;
-  margin: 20px auto 0 20px;
+  margin: 40px 0 0 20px;
 }
 
 .u-section-5 .u-image-1 {
   width: 459px;
   height: 71px;
-  margin: 21px auto 0 20px;
-}
-
-.u-section-5 .u-text-2 {
-  margin: 0 0 -3px 20px;
+  margin: 21px auto 40px 20px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1043px;
+  }
+
   .u-section-5 .u-text-1 {
     margin-left: 0;
   }
@@ -328,13 +338,27 @@
   .u-section-5 .u-image-1 {
     margin-left: 0;
   }
+}
 
-  .u-section-5 .u-text-2 {
-    margin-left: 0;
+@media (max-width: 991px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 229px;
+  }
+
+  .u-section-5 .u-text-1 {
+    margin-top: 21px;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-bottom: 21px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1008px;
+  }
+
   .u-section-5 .u-text-1 {
     font-size: 1rem;
   }
@@ -342,7 +366,7 @@
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 958px;
+    min-height: 233px;
   }
 
   .u-section-5 .u-image-1 {
@@ -350,39 +374,42 @@
     height: 53px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 719px;
+  min-height: 840px;
 }
 
 .u-section-6 .u-text-1 {
-  font-weight: 400;
-  font-size: 1.25rem;
-  margin: 20px auto 0 20px;
-}
-
-.u-section-6 .u-image-1 {
-  width: 304px;
-  height: 540px;
-  margin: 8px auto 0;
-}
-
-.u-section-6 .u-btn-1 {
-  --radius: 50px;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  letter-spacing: 1px;
-  margin: 20px auto 43px;
-  padding: 17px 40px;
+  text-shadow: 2px 2px 8px rgba(128,128,128,1);
+  margin: 0 0 5px 20px;
 }
 
 @media (max-width: 1199px) {
   .u-section-6 .u-text-1 {
     margin-left: 0;
   }
+}.u-section-7 .u-sheet-1 {
+  min-height: 620px;
+}
+
+.u-section-7 .u-text-1 {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin: 20px 0 0 20px;
+}
+
+.u-section-7 .u-image-1 {
+  width: 304px;
+  height: 540px;
+  margin: 8px auto 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-text-1 {
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 767px) {
-  .u-section-6 .u-text-1 {
+  .u-section-7 .u-text-1 {
     font-size: 1rem;
   }
 }
