--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 597px;
 }
 
 .u-section-1 .u-text-1 {
@@ -12,7 +12,7 @@
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 1px auto 0 393px;
+  margin: 1px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
@@ -21,35 +21,26 @@
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: -42px 393px 0 auto;
+  margin: 11px auto 0;
 }
 
-.u-section-1 .u-btn-3 {
-  --radius: 50px;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  letter-spacing: 1px;
-  margin: 26px auto 60px;
+.u-section-1 .u-image-1 {
+  width: 215px;
+  height: 215px;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  animation-timing-function: ease-in-out;
+  margin: 31px 448px 60px auto;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-btn-1 {
-    margin-left: 193px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-right: 193px;
+  .u-section-1 .u-image-1 {
+    transition-duration: 0.5s;
   }
 }
 
-@media (max-width: 991px) {
-  .u-section-1 .u-btn-1 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-right: 0;
+@media (max-width: 767px) {
+  .u-section-1 .u-image-1 {
+    margin-right: 325px;
   }
 }
 
@@ -61,6 +52,10 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 4px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-right: 125px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 400px;
