--- a/index.css
+++ b/index.css
@@ -24,12 +24,21 @@
   margin: 11px auto 0;
 }
 
+.u-section-1 .u-btn-3 {
+  --radius: 50px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 11px auto 0;
+}
+
 .u-section-1 .u-image-1 {
   width: 215px;
   height: 215px;
   box-shadow: 2px 0 0 0 rgba(0,0,0,0);
   animation-timing-function: ease-in-out;
-  margin: 31px 448px 60px auto;
+  margin: 22px 447px 60px auto;
 }
 
 @media (max-width: 1199px) {
@@ -54,7 +63,12 @@
     margin-top: 4px;
   }
 
+  .u-section-1 .u-btn-3 {
+    margin-top: 21px;
+  }
+
   .u-section-1 .u-image-1 {
+    margin-top: 12px;
     margin-right: 125px;
   }
 }.u-section-2 .u-sheet-1 {
